fix: modal image was not visible on some macbooks

--- a/src/common/EventModal/styles.less
+++ b/src/common/EventModal/styles.less
@@ -102,7 +102,7 @@
     }
 }
 
-@media (orientation: landscape) and (max-height: @xsmall) {
+@media (orientation: landscape) and (max-height: @xxsmall) {
     .event-modal {
         .modal-dialog-container {
             .modal-dialog-content {
